# moner

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .golangci.yml  .http  .tool-versions  Cargo.toml  Makefile  README.md  angular.json  config.go  cypress.config.ts  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  poetry.toml  pyproject.toml  sqlc.yml
.sqlx/: query-131b0b3e39f7c908589fe20675fa542dc28755b0a7ec88773b10062d8232ca8b.json  query-2aa06aeba042ba9bcfaef0ad57b9b3cfe6cfdbb925a96b0b9add4ca14039c5e7.json  query-2bf09b11792537e0cf772ff4959452177fa954df36d1a6397fe28cb7ba361e4d.json  query-3d2e904b775f5661fa91f7656a17663632a96b6060fffaf28a39439907fd889d.json  query-47d5ab878b6d3fd1dc923d444bee640536c6ee89d2b3f54518268ed098b0afe1.json  query-5eab04b4b7c8689feb81a2ea8554487f4111a31f393fb0c6592ea17a6d1d0c02.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-711c1721d589dd5ebd64978fdecfdf2bd36b924c3ca307b4c40cf6cac744050a.json  query-7332fbdcce19ebfd457d73302777c7a22f9fbe480a07ebe55c2fca689725d4da.json  query-7e32fba8c5c946d0ac7d1069a91f8519c335d185d8fe2b6eb3a5ae035d606a44.json  query-7f894d0600c481b32a3d534e7f26a68bde43d740f9a05c1002521634475ed948.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a4e3df71172992d1a4a5762b0ce1aa239439b158851d155308d13eeeb209f24.json  query-8a60fe141a44d0619d1b4c712e1ab285d872f69f9b9b22347ae1ccb489684a74.json  query-a8930f31b54b38c3f34c8ef923f830003c2e658d17eb1a4431ec1a25990919bd.json  query-ab336482a38c213d8cb87dc572a668373c808cad07fd60eccfb44def97ac9b7b.json  query-bc449de8dfedb4a32882167f8fdaadcc30f292a0100ca983243a1891165bf704.json  query-bf6f6dbe1c45f2f607abca5d213fe0f34f754a6e794e2a3c3ca279cec2cb7760.json  query-cf5cd79573835a36e877c9c71b5b9aaf61f5b202ed24191bbf36e3152b2c938e.json  query-edec975a8849c2f30ba065b01f89f318f8c6f6bfa0a6d26dd0c0ddc54503fd30.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-f82dd3eaedafccea7083cce50d38d0b6101ca62113da5204abc9cec427252aa6.json  query-fab4d4a150c41cb1831b1c20633ae82eaf3f60be579543c1401e2a261ef039c5.json  (+1 more)
api/: .http
apps/server/: .env.example  Cargo.toml
apps/server/migrations/: 20240402185523_init.down.sql  20240402185523_init.up.sql
apps/server/src/: app.rs  database.rs  main.rs  settings.rs  validation.rs
apps/server/src/experience/: dtos.rs  routes.rs
apps/server/src/follows/: repository.rs  routes.rs
apps/server/src/services/: email.rs  verification.rs
apps/server/src/skills/: dtos.rs  mod.rs  repository.rs  routes.rs
apps/server/src/users/: auth.rs  dtos.rs  mod.rs  password.rs  repository.rs  routes.rs
backend/: Dockerfile  gunicorn_config.py
(+364 files in other folders)
