[package]
name = "moner"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }

sqlx = { version = "0.8.3", features = [
	"runtime-async-std-native-tls",
	"postgres",
	"chrono",
	"uuid",
] }

tower-http = { version = "0.6.2", features = [
	"trace",
	"compression-br",
	"propagate-header",
	"cors",
] }
tower-cookies = "0.11.0"

dotenvy = "0.15.7"
lazy_static = "1.5.0"
async-trait = "0.1.86"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.9.0"

log = "0.4.25"
tracing = "0.1.41"
env_logger = "0.11.6"
pretty_env_logger = "0.5.0"

validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.95"
thiserror = "2.0.11"

jsonwebtoken = "9.3.1"
lettre = "0.11.12"
mrml = "4.0.1"
